[package]
name = "newt"
version = "0.6.6"
authors = ["Robert Gill <locke@sdf.org>"]
description = "Rust bindings for the Newt console UI library"
repository = "https://github.com/rtgill82/newt-rs"
license = "LGPL-2.1-only"
categories = ["api-bindings", "os::unix-apis"]
keywords = ["bindings", "tui"]
readme = "README.md"
edition = "2018"

[features]
static = ["newt-sys/static"]
asm    = []

[dependencies]
libc     = "0.2"
newt-sys = "~0.1.7"

[dependencies.newt_proc_macros]
version = "=0.0.7"
path    = "./newt_proc_macros"

[dev-dependencies]
chrono   = "0.4"
tempfile = "3.0"

[profile.release]
opt-level = 1

[package.metadata.docs.rs]
features = ["asm"]
