[package]
name = "newt_component_derive"
version = "0.0.0"
authors = ["Robert Gill <locke@sdf.lonestar.org>"]
description = "Proc macros for newt-rs"
repository = "https://github.com/xelkarin/newt-rs"
license = "LGPL-2.0-only"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.22"
quote = "0.6.10"
